--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,44 @@
    <link rel="stylesheet" href="./styles/css/style.css">
    <title>Document</title>
 </head>
+<header>
+        <div class="entete">
+            <div class="zone-logo">
+                <img src="./styles/image/OBSCENE V1.png" height="100" width="400">
+            </div>
+        </div>
+        <nav>
+            <div class="container flex">
+                <ul>
+                    <li>
+                        <a href="index.html">Acceuil</a>
+                    </li>
+                    <li>
+                        <a href="groupe.html">Le Groupe</a>
+                    </li>
+                    <li>
+                        <a href="photo.html">Photo/Vidéo</a>
+                    </li>
+                    <li>
+                         <a href="Concert">Concerts</a>
+                    </li>
+                    <li>
+                        <a href="Boutique.html">Boutique</a>
+                    </li>
+                    <li>
+                        <a href="Contact">Contact</a>
+                    </li>
+                </ul>
+                <span class="svg">
+                    <a href="https://www.facebook.com/obscenemusique">
+                    <img src="./styles/svg/facebook-blancs2.svg" height="25" width="25"></a>
+                    <a href="https://www.instagram.com/obscenemusique">
+                    <img src="./styles/svg/instagram-blanc.svg" height="25" width="25"></a>
+                    <a href="https://www.youtube.com/@TheObsceneband">
+                    <img src="./styles/svg/youtube.blanc.svg" height="25" width="25"></a>
+                </span>
+            </div>
+        </nav>
 <body>
    <h1>Mon titre</h1>
    <h2>Deuxième prout</h2>
