--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,9 @@
    <link rel="stylesheet" href="./styles/css/style.css">
    <title>Document</title>
 </head>
-<header>
+
+<body>
+   <header>
         <div class="entete">
             <div class="zone-logo">
                 <img src="./styles/image/OBSCENE V1.png" height="100" width="400">
@@ -45,7 +47,7 @@
                 </span>
             </div>
         </nav>
-<body>
+      </header>
    <h1>Mon titre</h1>
    <h2>Deuxième prout</h2>
 </body>
