--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    HEADER
+</header>
 <body>
     <h1>Quelle beau SLIP</h1>
 </body>
